tests/ui/traits/alias/self-in-generics.stderr
error[E0038]: the trait alias `SelfInput` is not dyn compatible
  --> $DIR/self-in-generics.rs:8:19
   |
LL | pub fn f(_f: &dyn SelfInput) {}
   |                   ^^^^^^^^^
   |
   = note: it cannot use `Self` as a type parameter in a supertrait or `where`-clause

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0038`.
